--- a/notebooks/01-Modelamiento.ipynb
+++ b/notebooks/01-Modelamiento.ipynb
@@ -344,6 +344,11 @@
     "    # Convertir las cadenas a tipo numérico (float)\n",
     "    df['pos_x'] = df['pos_x'].str.replace(',', '.').astype(float)\n",
     "    df['pos_y'] = df['pos_y'].str.replace(',', '.').astype(float)\n",
+    "    # Supongamos que tu DataFrame se llama df\n",
+    "    df.rename(columns={'pos_x': 'longitud', 'pos_y': 'latitud'}, inplace=True)\n",
+    "\n",
+    "    #df['longitud'].fillna(0, inplace = True)\n",
+    "    #df['latitud'].fillna(0, inplace = True)   \n",
     "    return df\n",
     "def extraer_coordenadas(texto):\n",
     "    # Utilizamos una expresión regular para extraer las coordenadas\n",
@@ -380,24 +385,34 @@
     "    # Llenar los valores nulos en 'fecha_fallecimiento' con 'fecha' + 7 días\n",
     "    df['fecha_fallecimiento'] = df['fecha_fallecimiento'].combine_first(df['fecha'] + pd.DateOffset(days=7))\n",
     "    \n",
+    "    df['edad'] = pd.to_numeric(df['edad'], errors='coerce')\n",
+    "    \n",
+    "    # Llenar los valores nulos en 'edad' con -1\n",
+    "    df['edad'] = df['edad'].fillna(-1)\n",
+    "    \n",
+    "    # Filtrar valores no negativos en 'edad' y luego convertir a entero\n",
+    "    df['edad'] = np.where((df['edad'] >= 0), df['edad'].astype(int), -1)\n",
+    "\n",
+    "  \n",
     "    # Seleccionar todas las columnas de tipo objeto\n",
     "    columnas_objeto = df.select_dtypes(include=['object']).columns\n",
     "    \n",
     "    # Reemplazar los valores NaN con \"SRE\" en las columnas seleccionadas\n",
     "    df[columnas_objeto] = df[columnas_objeto].fillna(\"SNR\")\n",
+    "    \n",
     "    # Eliminar columnas innecesarias\n",
-    "    columns_to_drop = ['fecha','aaaa', 'mm', 'dd']\n",
+    "    columns_to_drop = ['fecha', 'aaaa', 'mm', 'dd']\n",
     "    df2 = df.drop(columns=columns_to_drop)\n",
+    "    \n",
     "    # Llenar los valores nulos en 'hora' con '00:00:00'\n",
     "    df2['fecha_fallecimiento'] = df2['fecha_fallecimiento'].fillna('2018-09-21 00:00:00')\n",
-    "    df2['fecha_fallecimiento'] =  pd.to_datetime(df2['fecha_fallecimiento'])\n",
+    "    df2['fecha_fallecimiento'] = pd.to_datetime(df2['fecha_fallecimiento'])\n",
     "\n",
-    " \n",
     "    return df2\n",
     "\n",
     "# Ejemplo de uso:\n",
     "# Supongamos que tu DataFrame se llama 'victima_h_l'\n",
-    "victima_h_lm = procesar_victima_h_l(victima_h_l.copy())"
+    "victima_h_lm = procesar_victima_h_l(victima_h_l.copy())\n"
    ]
   },
   {
@@ -418,10 +433,10 @@
       " 1   rol                  717 non-null    object        \n",
       " 2   victima              717 non-null    object        \n",
       " 3   sexo                 717 non-null    object        \n",
-      " 4   edad                 717 non-null    object        \n",
+      " 4   edad                 717 non-null    int32         \n",
       " 5   fecha_fallecimiento  717 non-null    datetime64[ns]\n",
-      "dtypes: datetime64[ns](1), object(5)\n",
-      "memory usage: 33.7+ KB\n"
+      "dtypes: datetime64[ns](1), int32(1), object(4)\n",
+      "memory usage: 30.9+ KB\n"
      ]
     }
    ],
@@ -525,8 +540,8 @@
       " 6   direccion_normalizada  696 non-null    object        \n",
       " 7   comuna                 696 non-null    int64         \n",
       " 8   xy_caba_               696 non-null    object        \n",
-      " 9   pos_x                  684 non-null    float64       \n",
-      " 10  pos_y                  684 non-null    float64       \n",
+      " 9   longitud               684 non-null    float64       \n",
+      " 10  latitud                684 non-null    float64       \n",
       " 11  participantes          696 non-null    object        \n",
       " 12  victima                696 non-null    object        \n",
       " 13  acusado                696 non-null    object        \n",
@@ -588,7 +603,7 @@
     "crs={'init':'epsg:4326'}\n",
     "\n",
     "#Definimos la geometría según nuestro dataset\n",
-    "geometry=[Point(xy) for xy in zip(data_c[\"pos_x\"], data_c[\"pos_y\"])]\n",
+    "geometry=[Point(xy) for xy in zip(data_c[\"longitud\"], data_c[\"latitud\"])]\n",
     "#Ua vez que tenemos el sistema de referencia decoordenadas y la geometría; se procede a la carga de los datos\n",
     "geodata=gpd.GeoDataFrame(data_c,crs=crs, geometry=geometry)\n",
     "\n",
@@ -1065,10 +1080,10 @@
       " 1   rol                  717 non-null    object        \n",
       " 2   victima              717 non-null    object        \n",
       " 3   sexo                 717 non-null    object        \n",
-      " 4   edad                 717 non-null    object        \n",
+      " 4   edad                 717 non-null    int32         \n",
       " 5   fecha_fallecimiento  717 non-null    datetime64[ns]\n",
-      "dtypes: datetime64[ns](1), object(5)\n",
-      "memory usage: 33.7+ KB\n"
+      "dtypes: datetime64[ns](1), int32(1), object(4)\n",
+      "memory usage: 30.9+ KB\n"
      ]
     }
    ],
@@ -1131,51 +1146,65 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>edad</th>\n",
        "      <th>fecha_fallecimiento</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
+       "      <td>717.000000</td>\n",
        "      <td>717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
+       "      <td>38.976290</td>\n",
        "      <td>2018-09-10 21:11:17.824267776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
+       "      <td>-1.000000</td>\n",
        "      <td>2016-01-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
+       "      <td>24.000000</td>\n",
        "      <td>2017-04-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
+       "      <td>35.000000</td>\n",
        "      <td>2018-07-07 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
+       "      <td>55.000000</td>\n",
        "      <td>2019-12-18 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
+       "      <td>95.000000</td>\n",
        "      <td>2022-01-03 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>22.143154</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 fecha_fallecimiento\n",
-       "count                            717\n",
-       "mean   2018-09-10 21:11:17.824267776\n",
-       "min              2016-01-01 00:00:00\n",
-       "25%              2017-04-01 00:00:00\n",
-       "50%              2018-07-07 00:00:00\n",
-       "75%              2019-12-18 00:00:00\n",
-       "max              2022-01-03 00:00:00"
+       "             edad            fecha_fallecimiento\n",
+       "count  717.000000                            717\n",
+       "mean    38.976290  2018-09-10 21:11:17.824267776\n",
+       "min     -1.000000            2016-01-01 00:00:00\n",
+       "25%     24.000000            2017-04-01 00:00:00\n",
+       "50%     35.000000            2018-07-07 00:00:00\n",
+       "75%     55.000000            2019-12-18 00:00:00\n",
+       "max     95.000000            2022-01-03 00:00:00\n",
+       "std     22.143154                            NaN"
       ]
      },
      "execution_count": 33,
